# mcp-pdf2md

./: README.md  pyproject.toml
src/pdf2md/: __init__.py  __main__.py  server.py
src/pdf2md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_pdf2md.py
tests/ViewFile-6/: ViewFile-6.md
