[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "python-dotenv",
    "httpx",
    "typer",
    "mistralai",
    "python-datauri",
]

[project.scripts]
pdf2md = "pdf2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
